# api_docker_fix

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  pyproject.toml
deployments/docker/: Dockerfile  docker-compose.yml
doc/: actuall working thing.md  cehck.md  oldreadme  server add in api.md
docs/: gtupdate.md  production_setup.md  wrd-sync-persistence.md
git-repo/: README.md
migrations/: env.py
migrations/versions/: 001_initial.py
nginx/: nginx.conf
scripts/: backup.sh  generate_cluster_keys.py  init_multi_node.py
src/: config.py  main.py
src/api/: deps.py
src/api/v1/: clusters.py  health.py  nodes.py  rules.py
src/core/: security.py
src/db/: base.py  session.py
src/models/: cluster.py  node.py  rule.py
src/services/: cluster_service.py  rule_service.py  sync_service.py
src/utils/: git_sync.py  validators.py
